--- a/Li/9.2 每日刷题.md
+++ b/Li/9.2 每日刷题.md
@@ -34,7 +34,7 @@ class Solution {
         }
         int len = strs[0].length();
         int count = strs.length;
-        for(int i = 0; i < len; i++){
+        for(int i = 1; i < len; i++){
             char c = strs[0].charAt(i);
             for(int j = 0; j < count; j++){
                 if(i == strs[j].length() || strs[j].charAt(i) != c){
@@ -67,10 +67,10 @@ public class Solution {
         if(root1 != null && root2 != null){
             flag = subTree(root1, root2);
             if(!flag){
-                flag = subTree(root1.left, root2);
+                flag = HasSubtree(root1.left, root2);
             }
             if(!flag){
-                flag = subTree(root1.right, root2);
+                flag = HasSubtree(root1.right, root2);
             }
         }
         return flag;
